// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate function should perform the operation and return the result when buttonName is "=" 1`] = `
Object {
  "next": null,
  "operation": null,
  "total": "15",
}
`;

exports[`calculate function should return an object with null values when buttonName is AC 1`] = `
Object {
  "next": null,
  "operation": null,
  "total": null,
}
`;

exports[`calculate function should update the next value to "0." when buttonName is "." and there is an operation but no next value 1`] = `
Object {
  "next": "0.",
  "operation": "+",
  "total": "10",
}
`;

exports[`calculate function should update the next value when buttonName is a number 1`] = `
Object {
  "next": "53",
  "operation": "+",
  "total": "10",
}
`;
